2007-07-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncDialog.cs: Better conflict handling; also added "Always
	  perform this action" check button.
	* Tomboy/SyncManager.cs: Conflict handling and other fixes.
	* Tomboy/Watchers.cs: In the NoteRenameWatcher, handle a rename when
	  the editor widget loses focus.
	* Tomboy/RemoteControl.cs: Implemented GetNoteCompleteXml.
	* Tomboy/NoteManager.cs: Updated conflicting title exception messages
	  to say what the title is.
	* Tomboy/Preferences.cs: Added SYNC_CONFIGURED_CONFLICT_BEHAVIOR. 
	  Still need to expose in preferences dialog.
	* Tomboy/Note.cs: Added GetCompleteNoteXml and RenameWithoutLinkUpdate
	  methods.  Ensuring that any time the note title is changed, a save
	  is queued.

2007-07-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Tomboy.cs, Tomboy/RemoteControl.cs: Renaming
	  SetNoteContentsCompleteXml to SetNoteCompleteXml, and adding
	  GetNoteCompleteXml (not implemented yet) to the RemoteControl. 
	  Also added GetTagsForNote, AddTagToNote, RemoveTagFromNote, and
	  GetAllNotesWithTag.

2007-07-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy.mdp, Tomboy/Makefile.am, Tomboy/Gnome.Keyring/NoteItemData.cs,
	  Tomboy/Gnome.Keyring/sync-tree.sh, Tomboy/Gnome.Keyring/ItemACL.cs,
	  Tomboy/Gnome.Keyring/AccessRights.cs,
	  Tomboy/Gnome.Keyring/KeyringInfo.cs,
	  Tomboy/Gnome.Keyring/GenericItemData.cs,
	  Tomboy/Gnome.Keyring/KeyringException.cs,
	  Tomboy/Gnome.Keyring/ItemData.cs,
	  Tomboy/Gnome.Keyring/RequestMessage.cs,
	  Tomboy/Gnome.Keyring/NetItemData.cs, Tomboy/Gnome.Keyring/Ring.cs,
	  Tomboy/Gnome.Keyring/ItemType.cs,
	  Tomboy/Gnome.Keyring/Operation.cs,
	  Tomboy/Gnome.Keyring/ResponseMessage.cs,
	  Tomboy/Gnome.Keyring/AttributeType.cs,
	  Tomboy/Gnome.Keyring/ResultCode.cs: Bundling gnome-keyring-sharp. 
	  Still need to set up makefiles so that we favor an
	  already-installed Gnome.Keyring.dll.  Tomboy will work without a