@@ -2,9 +2,7 @@
 	namespace="Tomboy"
 	name="Bugzilla Links"
 	author="Tomboy Project"
-	description="Allows you to drag a Bugzilla URL from your browser directly
-				into a tomboy note.  The bug number is inserted as a link with
-				a little bug icon next to it."
+	description="Allows you to drag a Bugzilla URL from your browser directly into a tomboy note.  The bug number is inserted as a link with a little bug icon next to it."
 	category="Desktop Integration"
 	defaultEnabled="false"
 	version="0.1">
