@@ -2,8 +2,7 @@
 	namespace="Tomboy"
 	name="Evolution Mail Integration"
 	author="Tomboy Project"
-	description="Allows you to drag an email from Evolution into a tomboy note.
-The message subject is added as a link in the note."
+	description="Allows you to drag an email from Evolution into a tomboy note.  The message subject is added as a link in the note."
 	category="Desktop Integration"
 	defaultEnabled="true"
 	version="0.1">
